--- a/style/index.css
+++ b/style/index.css
@@ -18,8 +18,15 @@ a{
     text-decoration: none;
 }
 
+.back{
+    background-color: rgba(211, 226, 255, 0.85);
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
 section{
-    background-color: #d3e2ff;
+    background-image: url(../img/fundo.jpg);
     height: 600px;
     width: 70%;
     max-width: 500px;
@@ -27,8 +34,9 @@ section{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
 }
+
+
 
 section div{
     width: 100%;
